terraform/internet_gateway.tf
resource "aws_internet_gateway" "my_internet_gateway" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "My Internet Gateway"
  }
}
